--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,9 @@
   --color-darkColor: #151515;
   --color-lightColor: #52525b;
   --color-shop_light_green:#3b9c3c;
-
+  --color-dark_blue: #6c7fd6;
+  --color-shop_lighter_bg: #f1f3f6;
+  --color-shop_light_text: #686e7d;
 }
 
 @theme inline {
