--- a/app/globals.css
+++ b/app/globals.css
@@ -17,6 +17,7 @@
   --color-dark_blue: #6c7fd6;
   --color-shop_lighter_bg: #f1f3f6;
   --color-shop_light_text: #686e7d;
+  --color-deal-bg: #f1f3f8;
 }
 
 @theme inline {
